# strawpoll

./: Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: check.yml  coverage.yml  msrv.yml
src/: lib.rs
