[package]
name = "strawpoll"
version = "0.2.2"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A wrapper to avoid spurious polling."
repository = "https://github.com/jonhoo/strawpoll.git"

keywords = ["futures", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
futures-task = "0.3"

[dev-dependencies]
tokio-test = "0.2"
tokio = { version = "0.2", features = ["sync"] }
