[package]
name = "strawpoll"
version = "0.2.2"
edition = "2018"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A wrapper to avoid spurious polling."
repository = "https://github.com/jonhoo/strawpoll.git"

keywords = ["futures", "tokio"]
categories = ["asynchronous", "concurrency"]

[features]
stream = ["futures-core"]

[dependencies]
futures-task = "0.3"
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
